apps/rook-ceph-cluster/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: iaas-wcooke-me
    route.openshift.io/termination: reencrypt
    # route.openshift.io/destination-ca-certificate-secret: ca-bundle-rook-ceph-cluster
    forecastle.stakater.com/appName: Ceph S3 Frontend
    forecastle.stakater.com/expose: "true"
    forecastle.stakater.com/group: Storage
    forecastle.stakater.com/icon: https://ceph.apps.iaas.wcooke.me/assets/Ceph_Logo.svg
    forecastle.stakater.com/network-restricted: "true"
  name: ceph-objectstore-wildcard
spec:
  ingressClassName: openshift-default
  rules:
  - host: s3.apps.iaas.wcooke.me
    http:
      paths:
      - backend:
          service:
            name: rook-ceph-rgw-ceph-objectstore
            port:
              number: 443
        path: /
        pathType: Prefix
  - host: '*.s3.apps.iaas.wcooke.me'
    http:
      paths:
      - backend:
          service:
            name: rook-ceph-rgw-ceph-objectstore
            port:
              number: 443
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - s3.apps.iaas.wcooke.me
    - '*.s3.apps.iaas.wcooke.me'
    secretName: ceph-objectstore-wildcard-tls
